[package]
name = "oakc"
version = "0.1.0"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A portable programming language with an incredibly compact backend"
readme = "README.md"
documentation = "https://docs.rs/oakc"
homepage = "https://github.com/adam-mcdaniel/oakc"
repository = "https://github.com/adam-mcdaniel/oakc"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "oak"
path = "src/bin.rs"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
lalrpop-util = "0.19"
regex = "1"
comment = "0.1"
clap = "2.33"
asciicolor = "0.1"