[package]
name = "oakc"
version = "0.1.0"
authors = ["Adam McDaniel <adam.mcdaniel17@gmail.com>"]
edition = "2018"

[[bin]]
name = "oak"
path = "src/bin.rs"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
lalrpop-util = "0.19"
regex = "1"
comment = "0.1"
clap = "2.33"
asciicolor = "0.1"